/**
 * Copyright 2018-2022 Streamlit Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/

syntax = "proto3";

import "streamlit/lib/proto/Alert.proto";
import "streamlit/lib/proto/Arrow.proto";
import "streamlit/lib/proto/Audio.proto";
import "streamlit/lib/proto/Balloons.proto";
import "streamlit/lib/proto/ArrowVegaLiteChart.proto";
import "streamlit/lib/proto/BokehChart.proto";
import "streamlit/lib/proto/Button.proto";
import "streamlit/lib/proto/DownloadButton.proto";
import "streamlit/lib/proto/CameraInput.proto";
import "streamlit/lib/proto/Checkbox.proto";
import "streamlit/lib/proto/ColorPicker.proto";
import "streamlit/lib/proto/DataFrame.proto";
import "streamlit/lib/proto/DateInput.proto";
import "streamlit/lib/proto/DeckGlJsonChart.proto";
import "streamlit/lib/proto/DocString.proto";
import "streamlit/lib/proto/Empty.proto";
import "streamlit/lib/proto/Exception.proto";
import "streamlit/lib/proto/Favicon.proto";
import "streamlit/lib/proto/FileUploader.proto";
import "streamlit/lib/proto/GraphVizChart.proto";
import "streamlit/lib/proto/IFrame.proto";
import "streamlit/lib/proto/Image.proto";
import "streamlit/lib/proto/Json.proto";
import "streamlit/lib/proto/NumberInput.proto";
import "streamlit/lib/proto/Markdown.proto";
import "streamlit/lib/proto/Metric.proto";
import "streamlit/lib/proto/MultiSelect.proto";
import "streamlit/lib/proto/PlotlyChart.proto";
import "streamlit/lib/proto/Components.proto";
import "streamlit/lib/proto/Progress.proto";
import "streamlit/lib/proto/Snow.proto";
import "streamlit/lib/proto/Spinner.proto";
import "streamlit/lib/proto/Radio.proto";
import "streamlit/lib/proto/Selectbox.proto";
import "streamlit/lib/proto/Slider.proto";
import "streamlit/lib/proto/Text.proto";
import "streamlit/lib/proto/TextArea.proto";
import "streamlit/lib/proto/TextInput.proto";
import "streamlit/lib/proto/TimeInput.proto";
import "streamlit/lib/proto/VegaLiteChart.proto";
import "streamlit/lib/proto/Video.proto";

// An element which can be displayed on the screen.
message Element {

  // An element can be one of the following element types.
  oneof type {
    Alert alert = 30;
    Arrow arrow_data_frame = 40;
    Arrow arrow_table = 39;
    ArrowVegaLiteChart arrow_vega_lite_chart = 41;
    Audio audio = 13;
    Balloons balloons = 12;
    BokehChart bokeh_chart = 17;
    Button button = 19;
    DownloadButton download_button = 43;
    CameraInput camera_input = 45;
    Checkbox checkbox = 20;
    ColorPicker color_picker = 35;
    ComponentInstance component_instance = 37;
    DataFrame data_frame = 3;
    DataFrame table = 11;
    DateInput date_input = 27;
    DeckGlJsonChart deck_gl_json_chart = 34;
    DocString doc_string = 7;
    Empty empty = 2;
    Exception exception = 8;
    Favicon favicon = 36;
    FileUploader file_uploader = 33;
    GraphVizChart graphviz_chart = 18;
    IFrame iframe = 38;
    ImageList imgs = 6;
    Json json = 31;
    Markdown markdown = 29;
    Metric metric = 42;
    MultiSelect multiselect = 28;
    NumberInput number_input = 32;
    PlotlyChart plotly_chart = 16;
    Progress progress = 5;
    Radio radio = 23;
    Selectbox selectbox = 25;
    Slider slider = 21;
    Snow snow = 46;
    Spinner spinner = 44;
    Text text = 1;
    TextArea text_area = 22;
    TextInput text_input = 24;
    TimeInput time_input = 26;
    VegaLiteChart vega_lite_chart = 10;
    Video video = 14;

    // Next ID: 47
  }

  reserved 9;
}
