/**
 * Copyright 2018-2019 Streamlit Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/

syntax = "proto3";

// Message to share the file upload progress
message FileUploadStatus {
    enum FileUploadState {
        // The report compiled and ran.
        FINISHED = 0;
    
        UPLOADING = 1;
    
        ERROR = 2;
      }
      
    // widget Id
    string id = 1;

    // Current state (FINISHED | UPLOADING| ERROR)
    FileUploadState state = 2;

    // Current progress (btw 0 and 1)
    float progress = 3;

    // File id (full name on the server)
    string file_id = 4;
}
